--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Marc-Calafell/TDD-Roman-Numbers#readme",
   "devDependencies": {
+    "gulp": "^3.9.1",
     "laravel-elixir": "^6.0.0-11"
   }
 }
